# Rinna

./: .env  .gitattributes  .gitignore  .pre-commit-config.yaml  .rinna-config  .rinna.yaml  BUILD.md  CHANGELOG.md  CLAUDE.md  CLEANUP.md  CLI_MODULE_FIXES_COMPLETION.md  CLI_MODULE_FIXES_PROGRESS.md  CONTRIBUTING.md  DEVELOPER.md  Dockerfile.all-in-one  FOLDERS.md  JAVA21_MIGRATION.md  JUNIE.md  KANBAN.md  LICENSE  LOGGING_IMPLEMENTATION_SUMMARY.md  MACRO_AUTOMATION_DESIGN.md  MODEL_MAPPER_TESTING.md  Makefile  PUI_DESIGN_PRINCIPLES.md  README.md  README_CHANGES.md  SEO_RECOMMENDATIONS.md  TODO.md  activate-api.sh  activate-rinna.sh  activate-system-python.sh  antora-playbook.yml  bigmove.sh  build-api-cli.sh  build-docs.sh  build.sh  checkstyle.xml  clean-claude-references.sh  copy-branding.sh  (+26 more)
.github/workflows/: architecture-validation.yml  ci.yml  cli-module-build-verification.yml  coverage-report.yml  cross-language-tests.yml  python-container-ci.yml  quality-ci.yml  report-service-ci.yml  rin-ci.yml  test-failure-report.yml
.rinna/: workspace.yaml
.rinna/items/: 21659933-cfc7-4b33-914b-b09aeabf5d52.json  (+5 more)
.run/: Build All.run.xml  Build Go.run.xml  Build Java.run.xml  Build Python.run.xml
api/: README.md  build-logger.sh  build.sh  go.mod  go.sum  health_test.go  run-webhook-test.sh  swagger.yaml  test-webhook.sh  test_server.sh
config/: README.md  quality-gate.xml  rinna.yaml
docs/: 26-command-line-tools-with-notable-text-user-interfaces.md  CONTRIBUTING.md  DOCUMENTATION_IMPROVEMENT_PLAN.md  DOCUMENTATION_REVIEW.md  FOLDERS.md  RDSITWM1.2-IMPLEMENTATION-PLAN.md  README.md  antora.yml  atlassian-jira-a-comprehensive-analysis-of-project-and-product-management-features.md  glossary.md  playbook.yml  ryorin-do-RDSITWM1.2-a-standard-for-information-technology-work-management.md  technical-specification.md
docs-new/: CONSOLIDATION-PLAN.md  CONSOLIDATION-REPORT.md  README.md  admin-guide.md  api-reference.md  architecture-decisions.md  architecture.md  change-log.md  cli-reference.md  contributing.md  developer-guide.md  diagrams.md  getting-started.md  glossary.md  implementation-notes.md  integration-guide.md  migration-guide.md  performance.md  release-management.md  roadmap.md  ryorindo.md  security.md  standards.md  testing.md  troubleshooting.md  user-guide.md  workflow-guide.md
go/: go.mod  go.mod.bak  go.sum
java/: pom.xml
python/: .dockerignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Dockerfile.prod  README.md  docker-compose.yml  pyproject.toml  setup.py
python/docs/: antora.yml
python/docs/antora/: antora.yml
python/docs/antora/modules/ROOT/: nav.adoc
python/docs/antora/modules/ROOT/pages/: api-reference.adoc  architecture.adoc  index.adoc  modules.adoc  testing.adoc
python/docs/modules/ROOT/: nav.adoc
python/docs/modules/ROOT/pages/: api-reference.adoc  index.adoc
python/docs/modules/ROOT/pages/implementation/: architecture.adoc  patterns.adoc
python/lucidchart_py/: __init__.py
python/rinna/: __init__.py
python/rinna/api/: __init__.py  main.py
python/rinna/reports/: README.md  __init__.py  docmosis_renderer.py  renderer.py  reportlab_renderer.py  service.py  weasyprint_renderer.py  xhtml2pdf_renderer.py
python/rinna/reports/templates/: metrics_default.html
python/rinna/scripts/: c4_diagrams.py  generate-api-diagram.py  log_python.py  rinna_config.py  rinna_logger.py  test-version.py  test_c4_diagrams.py
python/rinna/scripts/api/: sync-swagger.py
python/tests/: __init__.py  conftest.py
python/tests/acceptance/: __init__.py  test_acceptance_workflow.py
python/tests/component/: test_component_config.py
python/tests/integration/: test_cross_language_api.py  test_integration_api.py  test_integration_cli.py
python/tests/performance/: test_perf_operations.py
python/tests/unit/: test_report_generation.py  test_version.py
rinna-cli/: README.md  pom.xml
rinna-core/: pom.xml
rinna-data-sqlite/: pom.xml  pom.xml.bad
scripts/: README.md  build.sh
src/: pom.xml
temp-cleanup/: cleanup-tests.sh
test-data/: malformed.md  minimal-info.md  not-markdown.txt  various-statuses.md  well-formatted.md  with-priorities.md
util/: build-orchestrator.sh
utils/: activate-api.sh  activate-python.sh  activate-rinna.sh  add-copyright-headers.sh  add-readme-copyright-header.sh  add-source-copyright-headers.sh  build-orchestrator.sh  build.sh  clean-claude-references.sh  cleanup-root.sh  remove-originals.sh
version-service/: README.md  go.mod  version.properties
(+1990 files in other folders)
